k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
